# vitax

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: config.yml
src/: dataset.py  my_types.py  patchify.py  train.py  transformer.py  utils.py
